Src/Driver/PI_F701/include/piapi.h

typedef struct qerror
{
   int32 point;
   int32 error;
} QERROR, PIPTR *LPQERROR;
/* static struct qerrors */
typedef struct qerrors
{
   int32 syserror;         /*  current system errors  */
   int32 numbpterrs;       /*  number of individual point errors  */
   struct qerror *qerr;   /*  list of points in error  */
} QERRORS, PIPTR *LPQERRORS;
PIINT32 piut_setpassword(const char PIPTR *username,
        const char PIPTR *oldpassword, const char PIPTR *newpassword);