Src/Driver/PI_F701/include/piapix.h

/*=== PI-API-X Definitions ============================================================*/
typedef struct _PITIMESTAMP {
   int32 month;    /* 1-12 */
   int32 year;     /* four digit */
   int32 day;      /* 1-31 */
   int32 hour;     /* 0-23 */
   int32 minute;   /* 0-59 */
   int32 tzinfo;   /* timezone information */
   double second; /* 0-59.99999999.... */
} PITIMESTAMP;
/*=======================================================================================
NOTE: this PIvaluetype typedef must be kept current with the definition in PIVALUE.HXX
=======================================================================================*/
typedef enum _PIvaluetype {
   PI_Type_null = 0,
   PI_Type_bool,
   PI_Type_uint8,
   PI_Type_int8,
   PI_Type_char,
   PI_Type_uint16,
   PI_Type_int16,
   PI_Type_uint32,
   PI_Type_int32,
   PI_Type_uint64,
   PI_Type_int64,
   PI_Type_float16,
   PI_Type_float32,
   PI_Type_float64,
   PI_Type_PI2,
   PI_Type_digital = 101,
   PI_Type_blob,
   PI_Type_PItimestamp = 104,
   PI_Type_PIstring,
   PI_Type_bad = 255
} PIvaluetype;
typedef struct
{
   PIvaluetype typex;
   float64  drval;
   int32    ival;
   void     *bval;  /* Set to NULL if not used. */
   uint32   bsize;
   int32    istat;
   int16    flags;
   PITIMESTAMP timestamp;
} PI_EVENT;
typedef struct
{
   PI_EVENT *newvalue;  /* Must be allocated */
   PI_EVENT *prevvalue; /* Must be set to NULL if not allocated */
   PI_EVENT *oldvalue;  /* Must be set to NULL if not allocated */
   float64   excdeveng;
   float64   excmin;
   float64   excmax;
} PI_EXCEPTSTRU;
/*=== PI-API-X Function Prototypes ====================================================*/
int32 PIPROC piar_getarcvaluesx( int32 ptnum, int32 arcmode, int32 PIPTR *count,
   float64 PIPTR *rval, int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize,
   int32 PIPTR *istat, int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp0,
   PITIMESTAMP PIPTR *timestamp, int32 funccode);
int32 PIPROC piar_getarcvaluesfilterx(int32 ptnum, int32 arcmode, int32 PIPTR *count,
   float64 PIPTR *rval, int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize,
   int32 PIPTR *istat, int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp0,
   PITIMESTAMP PIPTR *timestamp, char PIPTR *expression, int32 funccode);
int32 PIPROC piar_getarcvaluex( int32 ptnum, int32 mode, float64 PIPTR *rval,
   int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize, int32 PIPTR *istat,
   int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp);
int32 PIPROC piar_putarcvaluesx(int32 count, int32 mode, int32 PIPTR *ptnum,
   float64 PIPTR *rval, int32 PIPTR *ival, void PIPTR **bval, uint32 PIPTR *bsize,
   int32 PIPTR *istat, int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp,
   int32 PIPTR *errors);
int32 PIPROC piar_putarcvaluex(int32 ptnum, int32 mode, float64 PIPTR *rval,
   int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize, int32 PIPTR *istat,
   int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp);
int32 PIPROC pipt_pointtypex( int32 ptnum, PIvaluetype PIPTR *typex);
int32 PIPROC pisn_evmexceptionsx( int32 PIPTR *count, int32 PIPTR *ptnum,
   PI_EVENT PIPTR *values, int32 funccode);
int32 PIPROC pisn_flushputsnapqx( int32 PIPTR *numbpterrs, QERROR PIPTR *qerrs);
int32 PIPROC pisn_getsnapshotsx( int32 PIPTR *ptnum, int32 PIPTR *count_ptnum,
   float64 PIPTR *rval, int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize,
   int32 PIPTR *istat, int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp,
   int32 PIPTR *error, int32 funccode);
int32 PIPROC pisn_getsnapshotx( int32 ptnum, float64 PIPTR *rval,
   int32 PIPTR *ival, void PIPTR *bval, uint32 PIPTR *bsize, int32 PIPTR *istat,
   int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp);
int32 PIPROC pisn_putsnapshotqx( int32 ptnum, float64 PIPTR *rval, int32 PIPTR *ival,
   void PIPTR *bval, uint32 PIPTR *bsize, int32 PIPTR *istat,  int16 PIPTR *flags,
   PITIMESTAMP PIPTR *timestamp, pibool queueing, int32 PIPTR *numbpterrs,
   QERROR PIPTR *qerrs );
int32 PIPROC pisn_putsnapshotsx( int32 count, int32 PIPTR *ptnum, float64 PIPTR *rval,
   int32 PIPTR *ival, void PIPTR **bval, uint32 PIPTR *bsize, int32 PIPTR *istat,
   int16 PIPTR *flags, PITIMESTAMP PIPTR *timestamp, int32 PIPTR *errors);
int32 PIPROC pisn_putsnapshotx(int32 ptnum, float64 PIPTR *rval, int32 PIPTR *ival,
   void PIPTR *bval, uint32 PIPTR *bsize, int32 PIPTR *istat, int16 PIPTR *flags,
   PITIMESTAMP PIPTR *timestamp);
int32 PIPROC pisn_sendexceptionqx( int32 pt,
      PI_EVENT PIPTR *oldvalue, PI_EVENT PIPTR *prevvalue, PI_EVENT newvalue,
      float64 excdeveng, float64 excmin, float64 excmax, int32 PIPTR *count,
      pibool queueing, int32 PIPTR *numbpterrs, QERROR PIPTR *qerrs );
int32 PIPROC pisn_sendexceptionsx( int32 num_pts, int32 PIPTR *pt,
   PI_EXCEPTSTRU PIPTR **except, int32 PIPTR *errors, int32 PIPTR *count);
int32 PIPROC pitm_isdst(PITIMESTAMP PIPTR *timestamp);
int32 PIPROC pitm_getpitime(PITIMESTAMP PIPTR *timestamp, float64 PIPTR *frac);
double PIPROC pitm_getutctime(PITIMESTAMP PIPTR *timestamp);
void PIPROC pitm_setcurtime(PITIMESTAMP PIPTR *timestamp, pibool incl_subsec);
int32 PIPROC pitm_setpitime(PITIMESTAMP PIPTR *timestamp, int32 pitime, float64 frac);
int32 PIPROC pitm_settime(PITIMESTAMP PIPTR *timestamp, int32 year, int32 month,
   int32 day, int32 hour, int32 minute, float64 second);
void PIPROC pitm_setdst(PITIMESTAMP PIPTR *timestamp, int32 tm_isdst);
int32 PIPROC piut_errormsg(int32 stat, TCHAR PIPTR *msg, size_t PIPTR *msglen);
int32 PIPROC piut_strerror(int32 stat, TCHAR PIPTR *msg, size_t PIPTR *msglen,
                           const TCHAR PIPTR *filter);