Src/Driver/PI_F701/include/piapi32.bas


Declare Function piar_getarcvaluesx Lib "piapi32.dll" (ByVal PtNum&, ByVal arcMode&, Count&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp, time1 As PITimeStamp, ByVal FuncCode&) As Long
Declare Function piar_getarcvaluesfilterx Lib "piapi32.dll" (ByVal PtNum&, ByVal Mode&, Count&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp, time1 As PITimeStamp, ByVal Expr$, ByVal FuncCode&) As Long
Declare Function piar_getarcvaluex Lib "piapi32.dll" (ByVal PtNum&, ByVal arcMode&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp) As Long
Declare Function piar_putarcvaluesx Lib "piapi32.dll" (ByVal Count&, ByVal Mode&, PtNum&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp, Errors&) As Long
Declare Function piar_putarcvaluex Lib "piapi32.dll" (ByVal PtNum&, ByVal Mode&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp) As Long
Declare Function pipt_pointtypex Lib "piapi32.dll" (ByVal PtNum&, typeX&) As Long
'Declare Function pisn_evmexceptionsx Lib "piapi32.dll" (ByVal Count&, PTnum&, event As PI_EVENT, ByVal FuncCode&) As Long
Declare Function pisn_evmexceptx Lib "piapi32.dll" (Count&, PtNum&, typeX&, Val As Variant, iStat&, Flags%, Timeval As PITimeStamp, ByVal FuncCode&) As Long
Declare Function pisn_flushputsnapqx Lib "piapi32.dll" (numbptErrs&, qErrs As QERROR) As Long
Declare Function pisn_getsnapshotsx Lib "piapi32.dll" (PtNum&, cntptnum&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp, lerror&, ByVal FuncCode&) As Long
Declare Function pisn_getsnapshotx Lib "piapi32.dll" (ByVal PtNum&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As PITimeStamp) As Long
Declare Function pisn_putsnapshotqx Lib "piapi32.dll" (ByVal PtNum&, drVal As Any, iVal&, bVal As Any, bSize As Long, iStat As Long, Flags%, TimeStamp As PITimeStamp, ByVal Queueing&, numbptErrs&, qErrs As QERROR) As Long
'pisn_putsnapshotsx takes a pointer to an array of string pointers which can't be generated in VB
Declare Function pisn_putsnapshotsx Lib "piapi32.dll" (ByVal Count&, PtNum&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As Any, Errors&) As Long
Declare Function pisn_putsnapshotx Lib "piapi32.dll" (ByVal PtNum&, drVal As Any, iVal&, bVal As Any, bSize&, iStat&, Flags%, time0 As Any) As Long
'Declare Function pisn_sendexceptionqx Lib "piapi32.dll" (ByVal pt&, ByVal typeX&, oldValue As PI_EVENT, prevvalue As PI_EVENT, newvalue As PI_EVENT, ByVal ExcDevEng#, ByVal ExcMin#, ByVal ExcMax#, Count&, ByVal Queueing&, numbptErrs&, qErrs As QERROR) As Long
'Declare Function pisn_sendexceptionsx Lib "piapi32.dll" (ByVal num_pts&, ptnum&, typeX&, except As PI_EXCEPTSTRU, Errors&, Count&) As Long
Declare Function pisn_sendexceptqx Lib "piapi32.dll" (ByVal pt&, ByVal typeX&, oldVal As Variant, oldistat&, oldFlags%, oldTime As PITimeStamp, prevVal As Variant, previstat&, prevFlags%, prevTime As PITimeStamp, Val As Variant, iStat&, Flags%, newTime As PITimeStamp, ByVal ExcDevEng#, ByVal ExcMin#, ByVal ExcMax#, Count&, ByVal Queueing&, numbptErrs&, qErrs As QERROR) As Long
Declare Function pitm_getpitime Lib "piapi32.dll" (time0 As PITimeStamp, frac#) As Long
Declare Function pitm_getutctime Lib "piapi32.dll" (time0 As PITimeStamp) As Double
Declare Function pitm_isdst Lib "piapi32.dll" (time0 As PITimeStamp) As Long
Declare Sub pitm_setcurtime Lib "piapi32.dll" (time0 As PITimeStamp, ByVal incl_subsec%)
Declare Sub pitm_setdst Lib "piapi32.dll" (time0 As PITimeStamp, ByVal tm_isdst&)
Declare Function pitm_setpitime Lib "piapi32.dll" (time0 As PITimeStamp, ByVal PITime&, ByVal frac#) As Long
Declare Function pitm_settime Lib "piapi32.dll" (time0 As PITimeStamp, ByVal xyear&, ByVal xmonth&, ByVal xday&, ByVal xhour&, ByVal xminute&, ByVal xsecond#) As Long
Declare Function piut_errormsg Lib "piapi32.dll" (ByVal stat&, ByVal Msg$, MsgLen&) As Long
Declare Function piut_setpassword Lib "piapi32.dll" (ByVal username$, ByVal oldpw$, ByVal newpw$) As Long
Declare Function piut_strerror Lib "piapi32.dll" (ByVal stat&, ByVal Msg$, MsgLen&, ByVal SrcStr$) As Long

